--- a/LevyAutomatedTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
+++ b/LevyAutomatedTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6DD853B2-B63A-4C5E-958E-161B2E1F7D2F}</ProjectGuid>
+    <ProjectGuid>{C2F4042D-BE8F-4F20-BEE6-E22BBBEF6DCA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Levy_Pages</RootNamespace>
-    <AssemblyName>Levy_Pages</AssemblyName>
+    <RootNamespace>Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests</RootNamespace>
+    <AssemblyName>Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
