Building custom steps

--- a/src/Sfa.Das.EmployerAprrenticeshipService.Infrastructure/Sfa.Das.EmployerAprrenticeshipService.Infrastructure.csproj
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Infrastructure/Sfa.Das.EmployerAprrenticeshipService.Infrastructure.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Services\ILog.cs" />
     <Compile Include="Services\IRetryWebRequests.cs" />
     <Compile Include="Services\WebRequestRetryService.cs" />
+    <Compile Include="Steps\CreateDASAccountSteps.cs" />
     <Compile Include="Steps\PireanComponentsSteps.cs" />
   </ItemGroup>
   <ItemGroup>
