--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
@@ -106,6 +106,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="..\Sfa.Das.EmployerAprrenticeshipService.Infrastructure\Steps\CreateDASAccountSteps.cs">
+      <Link>CreateDASAccountSteps.cs</Link>
+    </Compile>
     <Compile Include="..\Sfa.Das.EmployerAprrenticeshipService.Infrastructure\Steps\PireanComponentsSteps.cs">
       <Link>PireanComponentsSteps.cs</Link>
     </Compile>
@@ -115,10 +118,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CancelInvitation.feature</DependentUpon>
     </Compile>
-    <Compile Include="Regression\CreateAccount.feature.cs">
+    <Compile Include="Regression\CreateAccount2.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CreateAccount.feature</DependentUpon>
+      <DependentUpon>CreateAccount2.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Regression\CreateDASAccount.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CreateDASAccount.feature</DependentUpon>
     </Compile>
     <Compile Include="Regression\InviteTeamMember.feature.cs">
       <AutoGen>True</AutoGen>
@@ -148,9 +156,13 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>CancelInvitation.feature.cs</LastGenOutput>
     </None>
-    <None Include="Regression\CreateAccount.feature">
+    <None Include="Regression\CreateAccount2.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>CreateAccount.feature.cs</LastGenOutput>
+      <LastGenOutput>CreateAccount2.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Regression\CreateDASAccount.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>CreateDASAccount.feature.cs</LastGenOutput>
     </None>
     <None Include="Regression\InviteTeamMember.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
