--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -22,6 +22,7 @@
 </specBind>
   <appSettings>
     <add key="baseUrl" value ="https://test-eas.apprenticeships.sfa.bis.gov.uk"/>
+    <add key="browserType" value="chrome"/>
     <add key="PireanUsername" value="doej"/>
     <add key ="PireanPassword" value="Office01"/>
     <add key="WaitinSeconds" value="3"/>
