extended journey till grant authority to empref

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -25,6 +25,10 @@
     <add key="browserType" value="chrome"/>
     <add key="PireanUsername" value="doej"/>
     <add key ="PireanPassword" value="Office01"/>
+    <add key="CompanyNumber" value="10284352"/>
+    <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED"/>
+    <add key="HMRCUN" value="user1"/>
+    <add key="HMRCPW" value="password1"/>
     <add key="WaitinSeconds" value="3"/>
   </appSettings>
   <runtime>
