--- a/src/Sfa.Das.EmployerAprrenticeshipService.Pages/Sfa.Das.EmployerAprrenticeshipService.Pages.csproj
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Pages/Sfa.Das.EmployerAprrenticeshipService.Pages.csproj
@@ -106,6 +106,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AML\GatewayConfirmPage.cs" />
+    <Compile Include="AML\HMRCPage.cs" />
+    <Compile Include="AML\HMRCResponsePage.cs" />
+    <Compile Include="AML\InformPage.cs" />
+    <Compile Include="AML\SearchForCompany.cs" />
+    <Compile Include="AML\VerifyCompanyPage.cs" />
     <Compile Include="Pirean\LoginPage.cs" />
     <Compile Include="Pirean\PireanRegisterPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
