--- a/src/Sfa.Das.EmployerAprrenticeshipService.Infrastructure/Sfa.Das.EmployerAprrenticeshipService.Infrastructure.csproj
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Infrastructure/Sfa.Das.EmployerAprrenticeshipService.Infrastructure.csproj
@@ -143,9 +143,14 @@
       <Link>phantomjs.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\packages\Selenium.Mozilla.Firefox.Webdriver.0.6.0.1\driver\wires-0.6.0-win.exe">
+      <Link>wires-0.6.0-win.exe</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="phantomjs-license.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Readme.txt" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
