--- a/src/Sfa.Das.EmployerAprrenticeshipService.Infrastructure/packages.config
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Infrastructure/packages.config
@@ -3,6 +3,7 @@
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
   <package id="PhantomJS" version="2.1.1" targetFramework="net452" />
   <package id="Polly" version="4.3.0" targetFramework="net452" />
+  <package id="Selenium.Mozilla.Firefox.Webdriver" version="0.6.0.1" targetFramework="net452" />
   <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net452" />
