--- a/src/Sfa.Das.EmployerAprrenticeshipService.Pages/Sfa.Das.EmployerAprrenticeshipService.Pages.csproj
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Pages/Sfa.Das.EmployerAprrenticeshipService.Pages.csproj
@@ -121,6 +121,13 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\packages\Selenium.Mozilla.Firefox.Webdriver.0.6.0.1\driver\wires-0.6.0-win.exe">
+      <Link>wires-0.6.0-win.exe</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Readme.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
