Jouney extended to cover all account creation steps

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -18,7 +18,7 @@
 <!-- For additional details on SpecBind configuration options see the project site. -->
   <application startUrl="https://test-eas.apprenticeships.sfa.bis.gov.uk
 " />
-  <browserFactory provider="SpecBind.Selenium.SeleniumBrowserFactory, SpecBind.Selenium" browserType="chrome" />
+  <browserFactory provider="SpecBind.Selenium.SeleniumBrowserFactory, SpecBind.Selenium" browserType="" />
 </specBind>
   <appSettings>
     <add key="baseUrl" value ="https://test-eas.apprenticeships.sfa.bis.gov.uk"/>
