--- a/src/Sfa.Das.EmployerAprrenticeshipService.Pages/packages.config
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Pages/packages.config
@@ -5,6 +5,7 @@
   <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net452" />
+  <package id="Selenium.WebDriver.IEDriver" version="2.53.1.1" targetFramework="net452" />
   <package id="SpecBind" version="1.7.2.276" targetFramework="net452" />
   <package id="SpecBind.Selenium" version="1.7.2.276" targetFramework="net452" />
   <package id="SpecBindGeneratorPlugin.SpecFlow" version="1.7.2.276" targetFramework="net452" />
