--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -23,7 +23,7 @@
   <appSettings>
     <add key="baseUrl" value ="https://test-eas.apprenticeships.sfa.bis.gov.uk"/>
     <add key="browserType" value="chrome"/>
-    <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com"/>
+    <add key="PireanUsername" value="sfa.aml.test+jane185@gmail.com"/>
     <add key ="PireanPassword" value="Office01"/>
     <add key="CompanyNumber" value="10284352"/>
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED"/>
