--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
@@ -114,6 +114,21 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Scenario_1.feature</DependentUpon>
     </Compile>
+    <Compile Include="HMRCScenarios\Scenario_2.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Scenario_2.feature</DependentUpon>
+    </Compile>
+    <Compile Include="HMRCScenarios\Scenario_3.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Scenario_3.feature</DependentUpon>
+    </Compile>
+    <Compile Include="HMRCScenarios\Scenario_9.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Scenario_9.feature</DependentUpon>
+    </Compile>
     <Compile Include="Steps\CreateDASAccountSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regression\CreateDASAccount.feature.cs">
@@ -141,6 +156,18 @@
     <None Include="HMRCScenarios\Scenario_1.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Scenario_1.feature.cs</LastGenOutput>
+    </None>
+    <None Include="HMRCScenarios\Scenario_2.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Scenario_2.feature.cs</LastGenOutput>
+    </None>
+    <None Include="HMRCScenarios\Scenario_3.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Scenario_3.feature.cs</LastGenOutput>
+    </None>
+    <None Include="HMRCScenarios\Scenario_9.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Scenario_9.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
     <None Include="Regression\CreateDASAccount.feature">
