--- a/src/Sfa.Das.EmployerAprrenticeshipService.Pages/Sfa.Das.EmployerAprrenticeshipService.Pages.csproj
+++ b/src/Sfa.Das.EmployerAprrenticeshipService.Pages/Sfa.Das.EmployerAprrenticeshipService.Pages.csproj
@@ -113,6 +113,7 @@
     <Compile Include="AML\HMRCPage.cs" />
     <Compile Include="AML\HMRCResponsePage.cs" />
     <Compile Include="AML\InformPage.cs" />
+    <Compile Include="AML\MemberDetailsPage.cs" />
     <Compile Include="AML\SearchForCompany.cs" />
     <Compile Include="AML\TeamViewPage.cs" />
     <Compile Include="AML\TransactionsPage.cs" />
