--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -23,12 +23,12 @@
   <appSettings>
     <add key="baseUrl" value ="https://test-eas.apprenticeships.sfa.bis.gov.uk"/>
     <add key="browserType" value="chrome"/>
-    <add key="PireanUsername" value="das.levy.hmrc.api+scenario1@gmail.com"/>
-    <add key ="PireanPassword" value="save-my-password-HMRC-1234"/>
+    <add key="PireanUsername" value="sfa.aml.test+jane184@gmail.com"/>
+    <add key ="PireanPassword" value="Office01"/>
     <add key="CompanyNumber" value="10284352"/>
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED"/>
-    <add key="HMRCUN" value="user1"/>
-    <add key="HMRCPW" value="password1"/>
+    <add key="HMRCUN" value="user3"/>
+    <add key="HMRCPW" value="password"/>
     <add key="WaitinSeconds" value="3"/>
   </appSettings>
   <runtime>
