--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -25,9 +25,11 @@
     <add key="browserType" value="chrome"/>
     <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com"/>
     <add key ="PireanPassword" value="Office01"/>
+    <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com"/>
+    <add key="InvitedUserPW" value="Office01"/>
     <add key="CompanyNumber" value="10284352"/>
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED"/>
-    <add key="HMRCUN" value="user3"/>
+    <add key="HMRCUN" value="user1"/>
     <add key="HMRCPW" value="password"/>
     <add key="WaitinSeconds" value="3"/>
   </appSettings>
