updatyed packages and changed browser selection logic

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -1,43 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
-    <section name="specBind" type="SpecBind.Configuration.ConfigurationSectionHandler, SpecBind" />
-  <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" /></configSections>
+    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+  </configSections>
+  
 <specFlow>
     
     <stepAssemblies>
-        <stepAssembly assembly="SpecBind" />
     </stepAssemblies>
     <unitTestProvider name="MsTest" />
     <plugins>
-        <add name="SpecBindGeneratorPlugin" type="Generator" />
     </plugins>
   <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
-<specBind>
-<!-- For additional details on SpecBind configuration options see the project site. -->
-  <application startUrl="https://test-eas.apprenticeships.sfa.bis.gov.uk
-" />
-  <browserFactory provider="SpecBind.Selenium.SeleniumBrowserFactory, SpecBind.Selenium" browserType="" />
-</specBind>
   <appSettings>
-    <add key="baseUrl" value ="https://test-eas.apprenticeships.sfa.bis.gov.uk"/>
-    <add key="browserType" value="chrome"/>
-    <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com"/>
-    <add key ="PireanPassword" value="Office01"/>
-    <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com"/>
-    <add key="InvitedUserPW" value="Office01"/>
-    <add key="CompanyNumber" value="10284352"/>
-    <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED"/>
-    <add key="HMRCUN" value="user1"/>
-    <add key="HMRCPW" value="password"/>
-    <add key="WaitinSeconds" value="3"/>
+    <add key="baseUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk" />
+    <add key="browserType" value="chrome" />
+    <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com" />
+    <add key="PireanPassword" value="Office01" />
+    <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com" />
+    <add key="InvitedUserPW" value="Office01" />
+    <add key="CompanyNumber" value="10284352" />
+    <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED" />
+    <add key="HMRCUN" value="user1" />
+    <add key="HMRCPW" value="password" />
+    <add key="WaitinSeconds" value="3" />
+    <add key="IEDriverPath" value="C:\code\AutomatedUITests\src\packages\Selenium.WebDriver.IEDriver.2.53.1.1\driver"/>
+    <add key="ChromeDriver" value="C:\code\AutomatedUITests\src\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\driver"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="TechTalk.SpecFlow" publicKeyToken="0778194805d6db41" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
