updated config and readme

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -24,9 +24,9 @@
     <add key="HMRCUN" value="user1" />
     <add key="HMRCPW" value="password" />
     <add key="WaitinSeconds" value="3" />
-    <add key="IEDriverPath" value="C:\code\AutomatedUITests\src\packages\Selenium.WebDriver.IEDriver.2.53.1.1\driver"/>
-    <add key="ChromeDriver" value="C:\code\AutomatedUITests\src\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\driver"/>
-    <add key="PhantomDriver" value="C:\code\AutomatedUITests\src\packages\Selenium.WebDriver.PhantomJS.Xplatform.2.45.0.1\lib\net40"/>
+    <add key="IEDriverPath" value="C:\code\AML_TestAutomation_Framework\src\packages\Selenium.WebDriver.IEDriver.2.53.1.1\driver"/>
+    <add key="ChromeDriver" value="C:\code\AML_TestAutomation_Framework\src\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\driver"/>
+    <add key="PhantomDriver" value="C:\code\AML_TestAutomation_Framework\src\packages\PhantomJS.2.1.1\tools\phantomjs"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
