changed password for test user

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -18,7 +18,7 @@
     <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com" />
     <add key="PireanPassword" value="Office01" />
     <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com" />
-    <add key="InvitedUserPW" value="Office01" />
+    <add key="InvitedUserPW" value="Password1" />
     <add key="CompanyNumber" value="10284352" />
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED" />
     <add key="HMRCUN" value="user3" />
