config changes to remove credentials.

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -16,7 +16,7 @@
     <add key="baseUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk" />
     <add key="browserType" value="chrome" />
     <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com" />
-    <add key="PireanPassword" value="Office01" />
+    <add key="PireanPassword" value="Password1" />
     <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com" />
     <add key="InvitedUserPW" value="Password1" />
     <add key="CompanyNumber" value="10284352" />
