--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -2,10 +2,8 @@
 <configuration>
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
-  </configSections>
-  
-<specFlow>
-    
+  </configSections>  
+<specFlow>    
     <stepAssemblies>
     </stepAssemblies>
     <unitTestProvider name="MsTest" />
@@ -15,14 +13,14 @@
   <appSettings>
     <add key="baseUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk" />
     <add key="browserType" value="chrome" />
-    <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com" />
-    <add key="PireanPassword" value="Password1" />
-    <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com" />
-    <add key="InvitedUserPW" value="Password1" />
+    <add key="PireanUsername" value="" />
+    <add key="PireanPassword" value="" />
+    <add key="InvitedUserName" value="" />
+    <add key="InvitedUserPW" value="" />
     <add key="CompanyNumber" value="10284352" />
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED" />
-    <add key="HMRCUN" value="user3" />
-    <add key="HMRCPW" value="password" />
+    <add key="HMRCUN" value="" />
+    <add key="HMRCPW" value="" />
     <add key="WaitinSeconds" value="3" />
     <add key="IEDriverPath" value="C:\code\AML_TestAutomation_Framework\src\packages\Selenium.WebDriver.IEDriver.2.53.1.1\driver"/>
     <add key="ChromeDriver" value="C:\code\AML_TestAutomation_Framework\src\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\driver"/>
