Updates on Automation Tests as of 20/09/2016

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/packages.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/packages.config
@@ -1,12 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NUnit" version="3.4.1" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.0" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.4.0" targetFramework="net452" />
+  <package id="NUnit.Runners" version="3.4.0" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
   <package id="Selenium.Mozilla.Firefox.Webdriver" version="0.6.0.1" targetFramework="net452" />
   <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net452" />
-  <package id="Selenium.WebDriver.IEDriver" version="2.53.1.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.IEDriver" version="2.53.1.1" targetFramework="net452" />
   <package id="Selenium.WebDriver.PhantomJS.Xplatform" version="2.45.0.1" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
   <package id="SpecFlow.CustomPlugin" version="2.1.0" targetFramework="net452" />
+  <package id="SpecFlow.MsTest" version="2.1.0" targetFramework="net452" />
+  <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
 </packages>
