--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -3,22 +3,23 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
-  
-<specFlow>
-    
+
+  <specFlow>
+
     <stepAssemblies>
     </stepAssemblies>
     <unitTestProvider name="MsTest" />
     <plugins>
     </plugins>
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  </specFlow>
   <appSettings>
     <add key="baseUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk" />
     <add key="browserType" value="chrome" />
-    <add key="PireanUsername" value="sfa.aml.test+jane@gmail.com" />
-    <add key="PireanPassword" value="Office01" />
+    <add key="PireanUsername" value="jsinclair.pride@gmail.com" />
+    <add key="PireanPassword" value="Password02" />
     <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com" />
-    <add key="InvitedUserPW" value="Office01" />
+    <add key="InvitedUserPW" value="Password1" />
     <add key="CompanyNumber" value="10284352" />
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED" />
     <add key="HMRCUN" value="user3" />
