Temp url added for PayeScheme

--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -15,6 +15,7 @@
   </specFlow>
   <appSettings>
     <add key="baseUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk" />
+    <add key="TempUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk/EmployerAccountPaye/ConfirmPayeScheme&amp;accountId=22?code=870719c81f5ac21ca5372d98" />
     <add key="browserType" value="chrome" />
     <add key="PireanUsername" value="jsinclair.pride@gmail.com" />
     <add key="PireanPassword" value="Password02" />
